<resources>
    <string name="app_name">GenX</string>
    <string name="error_need_to_add_trailing_effect_drawable">If you set trail enabled, you must set a value to
        button_trail_drawable.
    </string>
    <string name="text1">Heart of every home, sets include refrigerator, oven, induction stove, dishwasher</string>
    <string name="text2">Lounge where family gathers, sets include television and entertainment system, fans, lamps</string>
    <string name="text3">Owner\'s suite, sets include fans, lights, nightstand</string>
    <string name="text4">Restroom, sets may include shower, lights</string>
    <string name="text5">The Aegean Islands are within the sea and some bound it on its southern periphery…</string>
    <string name="connection_error">connection_error</string>
    <string name="network_connectivity_alert_message">network_connectivity_alert_message</string>
    <string name="retry">retry</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="staff_attendance">Power Consumption</string>
    <string name="bulb">bulb</string>
    <string name="bulb_status">Bulb status</string>
    <string name="_23">23</string>
    <string name="kitchen">Kitchen</string>
    <string name="_44">44</string>
    <string name="bathroom">Bathroom</string>
    <string name="_67">67</string>
    <string name="bedroom">Bedroom</string>
    <string name="_17">17</string>
    <string name="_50">50</string>
    <string name="_33">33</string>
</resources>
