<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.megathon.smarthome.ui.login.SigninViewmodel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eaedf2"
            tools:context=".acount.SigninActivity">

        <ImageView android:id="@+id/imageView"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" android:scaleType="fitXY"/>

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="43dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="15dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical" android:background="@drawable/ic_rd_corner">
            <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email"
                    android:textSize="15sp"
                    android:textColorHint="@color/colorPrimary"
                    android:drawablePadding="10dp"
                    android:background="@null"
                    android:fontFamily="sans-serif-smallcaps"
                    tools:ignore="Autofill"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="0.8"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorPrimary"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                />
            </LinearLayout>
            <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:background="@null"
                    android:textSize="15sp"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/password"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    tools:ignore="Autofill"/>

            <LinearLayout android:id="@+id/linView"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:visibility="gone">
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="0.8"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorPrimary"
                />
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                />
            </LinearLayout>
            <EditText
                    android:id="@+id/etRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:visibility="gone"
                    android:background="@null"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/password"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"

            />
        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                android:clickable="true"
                android:transitionName="demo"
                app:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_next"
                android:focusable="true"/>
        <TextView
                android:id="@+id/tvForgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/idTittle"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/forgot_password"
                android:background="@drawable/ic_rd_corner_left"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:fontFamily="sans-serif-smallcaps"/>

        <TextView
                android:id="@+id/idTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/login"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintVertical_bias="0.25"
                android:fontFamily="sans-serif-smallcaps"/>


        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                android:orientation="horizontal"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>